--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,7 @@
     "manifest": "deno task cli manifest $(pwd)",
     "start": "deno run -A --watch=src/static/,src/routes/ src/dev.ts",
     "build": "deno run -A src/dev.ts build",
-    "docker": "deno run -A docker.ts",
+    "docker": "deno run -A .docker/docker.ts",
     "preview": "deno run -A src/main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
@@ -26,6 +26,7 @@
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "@std/dotenv": "jsr:@std/dotenv@^0.221.0",
+    "@std/path": "jsr:@std/path@^0.221.0",
     "preact": "https://esm.sh/preact@10.19.6",
     "preact/": "https://esm.sh/preact@10.19.6/",
     "tailwindcss": "npm:tailwindcss@3.4.1",
